<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Delivery Online Courses</string>
    <string name="welcome_to_limkokwing_delivery_online_course">Welcome to Limkokwing Delivery Online Course</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="front_end_web_development">Front-end web development</string>
    <string name="mobile_app_develpment">Mobile App Develpment</string>
    <string name="data_science">Data Science</string>
    <string name="a_data_science_is_a_field_of_study_that_combines_domain_expertise_programming_skills_and_knowledge_of_mathematics_and_statistics_to_extract_meaningful_insights_from_data_data_science_practitioners_apply_machine_learning_algorithms_to_numbers_text_images_videos_audios_and_more_to_produce_artificial_intelligence_systems_to_perform_tasks_that_ordinarily_require_human_intelligence">A data science is a field of study that combines domain expertise, programming skills, and knowledge of mathematics and statistics to extract meaningful insights from data. Data science practitioners apply machine learning algorithms to numbers, text, images, videos, audios and more to produce artificial intelligence systems to perform tasks that ordinarily require human intelligence.</string>
    <string name="mobile_app_development_is_the_process_of_creating_software_applications_that_run_on_mobile_devices_and_a_typical_mobile_application_utilises_a_network_connection_to_work_with_remote_computing_resources">Mobile App Development is the process of creating software applications that run on mobile devices and a typical mobile application utilises a network connection to work with remote computing resources.</string>
    <string name="front_end_web_development_also_known_as_client_side_development_is_the_practice_of_producing_html_css_and_javascript_for_a_website_or_a_wep_application_for_the_user_to_interact_with_them_directly_click_on_the_button_below_to_read_more_about_front_end_web_development">Front-end web development , also known as client-side development, is the practice of producing HTML, CSS, and JavaScript for a Website or a Wep Application for the user to interact with them directly. Click on the button below to read more about Front-end web development.</string>
    <string name="below_is_a_full_explanation_of_front_end_web_development">Below is a full explanation of Front-end web development</string>
</resources>